FEAT-3849 Bling: Productize ProductCatalog Dashboard - Added keys to localize Top 10 Revenue graph

--- a/MetraOffer/App_LocalResources/ProductDashboard.aspx.fr.resx
+++ b/MetraOffer/App_LocalResources/ProductDashboard.aspx.fr.resx
@@ -213,4 +213,7 @@
   <data name="TEXT_SUBSCRIPTIONS_LOSS_TOOLTIP" xml:space="preserve">
     <value>{FR}Decrease of {0} or {1} subscriptions</value>
   </data>      
+  <data name="TEXT_REVENUE_TOOLTIP" xml:space="preserve">
+    <value>{FR}Revenue</value>
+  </data>  
 </root>
