--- a/MetraOffer/App_LocalResources/ProductDashboard.aspx.de.resx
+++ b/MetraOffer/App_LocalResources/ProductDashboard.aspx.de.resx
@@ -213,4 +213,7 @@
   <data name="TEXT_SUBSCRIPTIONS_LOSS_TOOLTIP" xml:space="preserve">
     <value>{DE}Decrease of {0} or {1} subscriptions</value>
   </data>  
+  <data name="TEXT_REVENUE_TOOLTIP" xml:space="preserve">
+    <value>{DE}Revenue</value>
+  </data>  
 </root>
