--- a/MetraOffer/App_LocalResources/ProductDashboard.aspx.ja.resx
+++ b/MetraOffer/App_LocalResources/ProductDashboard.aspx.ja.resx
@@ -213,4 +213,7 @@
   <data name="TEXT_SUBSCRIPTIONS_LOSS_TOOLTIP" xml:space="preserve">
     <value>{JA}Decrease of {0} or {1} subscriptions</value>
   </data>   
+  <data name="TEXT_REVENUE_TOOLTIP" xml:space="preserve">
+    <value>{JA}Revenue</value>
+  </data>  
 </root>
