--- a/MetraOffer/App_LocalResources/ProductDashboard.aspx.pt-br.resx
+++ b/MetraOffer/App_LocalResources/ProductDashboard.aspx.pt-br.resx
@@ -213,4 +213,7 @@
   <data name="TEXT_SUBSCRIPTIONS_LOSS_TOOLTIP" xml:space="preserve">
     <value>{PT-BR}Decrease of {0} or {1} subscriptions</value>
   </data>  
+  <data name="TEXT_REVENUE_TOOLTIP" xml:space="preserve">
+    <value>{PT-BR}Revenue</value>
+  </data>  
 </root>
