FEAT-3849 Bling: Productize ProductCatalog Dashboard - Changed the message displayed when no records are found to display in grid and graph

--- a/MetraOffer/App_LocalResources/ProductDashboard.aspx.de.resx
+++ b/MetraOffer/App_LocalResources/ProductDashboard.aspx.de.resx
@@ -193,7 +193,7 @@
     <value>{DE}Subscriptions Loss</value>
   </data>
   <data name="TEXT_NO_DATA_AVAILABLE" xml:space="preserve">
-    <value>{DE}No data available</value>
+    <value>{DE}No data found</value>
   </data>  
   <data name="TEXT_CHANGE_TOOLTIP" xml:space="preserve">
     <value>{DE}Change</value>
