--- a/MetraOffer/App_LocalResources/ProductDashboard.aspx.en-GB.resx
+++ b/MetraOffer/App_LocalResources/ProductDashboard.aspx.en-GB.resx
@@ -193,7 +193,7 @@
     <value>Subscriptions Loss</value>
   </data>
   <data name="TEXT_NO_DATA_AVAILABLE" xml:space="preserve">
-    <value>No data available</value>
+    <value>No data found</value>
   </data>  
   <data name="TEXT_CHANGE_TOOLTIP" xml:space="preserve">
     <value>Change</value>
