--- a/MetraOffer/App_LocalResources/ProductDashboard.aspx.es.resx
+++ b/MetraOffer/App_LocalResources/ProductDashboard.aspx.es.resx
@@ -193,7 +193,7 @@
     <value>{ES}Subscriptions Loss</value>
   </data>
   <data name="TEXT_NO_DATA_AVAILABLE" xml:space="preserve">
-    <value>{ES}No data available</value>
+    <value>{ES}No data found</value>
   </data>  
   <data name="TEXT_CHANGE_TOOLTIP" xml:space="preserve">
     <value>{ES}Change</value>
