FEAT-3849 Bling: Productize ProductCatalog Dashboard - FEAT-4499: Configure html tool-tips for the graphs - Code refactoring
Code reviewer: dgaz

--- a/MetraOffer/App_LocalResources/ProductDashboard.aspx.it.resx
+++ b/MetraOffer/App_LocalResources/ProductDashboard.aspx.it.resx
@@ -198,18 +198,13 @@
   <data name="TEXT_CHANGE_TOOLTIP" xml:space="preserve">
     <value>{IT}Change</value>
   </data>
-  <data name="TEXT_MRR" xml:space="preserve">
+  <data name="TEXT_MRR_TOOLTIP" xml:space="preserve">
     <value>{IT}MRR</value>
   </data>
   <data name="TEXT_SUBSCRIPTIONS_TOOLTIP" xml:space="preserve">
     <value>{IT}Subscriptions</value>
   </data>
-  <data name="TEXT_SUBSCRIPTIONS_GAIN_TOOLTIP" xml:space="preserve">
-    <value>{IT}Increase of {0} or {1} subscriptions</value>
-  </data>
-  <data name="TEXT_SUBSCRIPTIONS_LOSS_TOOLTIP" xml:space="preserve">
-    <value>{IT}Decrease of {0} or {1} subscriptions</value>
-  </data>    
+ 
   <data name="TEXT_REVENUE_TOOLTIP" xml:space="preserve">
     <value>{IT}Revenue</value>
   </data>  
