--- a/MetraOffer/App_LocalResources/ProductDashboard.aspx.en-GB.resx
+++ b/MetraOffer/App_LocalResources/ProductDashboard.aspx.en-GB.resx
@@ -198,18 +198,13 @@
   <data name="TEXT_CHANGE_TOOLTIP" xml:space="preserve">
     <value>Change</value>
   </data>
-  <data name="TEXT_MRR" xml:space="preserve">
+  <data name="TEXT_MRR_TOOLTIP" xml:space="preserve">
     <value>MRR</value>
   </data>
   <data name="TEXT_SUBSCRIPTIONS_TOOLTIP" xml:space="preserve">
     <value>Subscriptions</value>
   </data>
-  <data name="TEXT_SUBSCRIPTIONS_GAIN_TOOLTIP" xml:space="preserve">
-    <value>Increase of {0} or {1} subscriptions</value>
-  </data>
-  <data name="TEXT_SUBSCRIPTIONS_LOSS_TOOLTIP" xml:space="preserve">
-    <value>Decrease of {0} or {1} subscriptions</value>
-  </data>  
+ 
   <data name="TEXT_REVENUE_TOOLTIP" xml:space="preserve">
     <value>Revenue</value>
   </data>  
