--- a/MetraOffer/App_LocalResources/ProductDashboard.aspx.es-MX.resx
+++ b/MetraOffer/App_LocalResources/ProductDashboard.aspx.es-MX.resx
@@ -198,18 +198,13 @@
   <data name="TEXT_CHANGE_TOOLTIP" xml:space="preserve">
     <value>{ES-MX}Change</value>
   </data>
-  <data name="TEXT_MRR" xml:space="preserve">
+  <data name="TEXT_MRR_TOOLTIP" xml:space="preserve">
     <value>{ES-MX}MRR</value>
   </data>
   <data name="TEXT_SUBSCRIPTIONS_TOOLTIP" xml:space="preserve">
     <value>{ES-MX}Subscriptions</value>
   </data>
-  <data name="TEXT_SUBSCRIPTIONS_GAIN_TOOLTIP" xml:space="preserve">
-    <value>{ES-MX}Increase of {0} or {1} subscriptions</value>
-  </data>
-  <data name="TEXT_SUBSCRIPTIONS_LOSS_TOOLTIP" xml:space="preserve">
-    <value>{ES-MX}Decrease of {0} or {1} subscriptions</value>
-  </data>       
+     
   <data name="TEXT_REVENUE_TOOLTIP" xml:space="preserve">
     <value>{ES-MX}Revenue</value>
   </data>  
