--- a/MetraOffer/App_LocalResources/ProductDashboard.aspx.es.resx
+++ b/MetraOffer/App_LocalResources/ProductDashboard.aspx.es.resx
@@ -198,18 +198,13 @@
   <data name="TEXT_CHANGE_TOOLTIP" xml:space="preserve">
     <value>{ES}Change</value>
   </data>
-  <data name="TEXT_MRR" xml:space="preserve">
+  <data name="TEXT_MRR_TOOLTIP" xml:space="preserve">
     <value>{ES}MRR</value>
   </data>
   <data name="TEXT_SUBSCRIPTIONS_TOOLTIP" xml:space="preserve">
     <value>{ES}Subscriptions</value>
   </data>
-  <data name="TEXT_SUBSCRIPTIONS_GAIN_TOOLTIP" xml:space="preserve">
-    <value>{ES}Increase of {0} or {1} subscriptions</value>
-  </data>
-  <data name="TEXT_SUBSCRIPTIONS_LOSS_TOOLTIP" xml:space="preserve">
-    <value>{ES}Decrease of {0} or {1} subscriptions</value>
-  </data>    
+ 
   <data name="TEXT_REVENUE_TOOLTIP" xml:space="preserve">
     <value>{ES}Revenue</value>
   </data>  
