--- a/MetraOffer/App_LocalResources/ProductDashboard.aspx.ja.resx
+++ b/MetraOffer/App_LocalResources/ProductDashboard.aspx.ja.resx
@@ -195,21 +195,13 @@
   <data name="TEXT_NO_DATA_AVAILABLE" xml:space="preserve">
     <value>{JA}No data found</value>
   </data>  
-  <data name="TEXT_CHANGE_TOOLTIP" xml:space="preserve">
-    <value>{JA}Change</value>
-  </data>
-  <data name="TEXT_MRR" xml:space="preserve">
+
+  <data name="TEXT_MRR_TOOLTIP" xml:space="preserve">
     <value>{JA}MRR</value>
   </data>
   <data name="TEXT_SUBSCRIPTIONS_TOOLTIP" xml:space="preserve">
     <value>{JA}Subscriptions</value>
   </data>
-  <data name="TEXT_SUBSCRIPTIONS_GAIN_TOOLTIP" xml:space="preserve">
-    <value>{JA}Increase of {0} or {1} subscriptions</value>
-  </data>
-  <data name="TEXT_SUBSCRIPTIONS_LOSS_TOOLTIP" xml:space="preserve">
-    <value>{JA}Decrease of {0} or {1} subscriptions</value>
-  </data>   
   <data name="TEXT_REVENUE_TOOLTIP" xml:space="preserve">
     <value>{JA}Revenue</value>
   </data>  
