--- a/MetraOffer/App_LocalResources/ProductDashboard.aspx.resx
+++ b/MetraOffer/App_LocalResources/ProductDashboard.aspx.resx
@@ -195,22 +195,13 @@
   <data name="TEXT_NO_DATA_AVAILABLE" xml:space="preserve">
     <value>No data found</value>
   </data>
-  <data name="TEXT_CHANGE_TOOLTIP" xml:space="preserve">
-    <value>Change</value>
-  </data>
-  <data name="TEXT_MRR" xml:space="preserve">
+  <data name="TEXT_MRR_TOOLTIP" xml:space="preserve">
     <value>MRR</value>
   </data>
   <data name="TEXT_SUBSCRIPTIONS_TOOLTIP" xml:space="preserve">
     <value>Subscriptions</value>
   </data>
-  <data name="TEXT_SUBSCRIPTIONS_GAIN_TOOLTIP" xml:space="preserve">
-    <value>Increase of {0} or {1} subscriptions</value>
-  </data>
-  <data name="TEXT_SUBSCRIPTIONS_LOSS_TOOLTIP" xml:space="preserve">
-    <value>Decrease of {0} or {1} subscriptions</value>
-  </data>
   <data name="TEXT_REVENUE_TOOLTIP" xml:space="preserve">
     <value>Revenue</value>
   </data>
-  </root>
+</root>
