CORE-5337 Intervals displays incorrectly at Issue Miscellaneous Adjustments

--- a/Adjustments/App_LocalResources/IssueMiscellaneousAdjustment.aspx.resx
+++ b/Adjustments/App_LocalResources/IssueMiscellaneousAdjustment.aspx.resx
@@ -196,7 +196,7 @@
     <value>Miscellaneous Adjustment Issue</value>
   </data>
   <data name="TEXT_MAX_AUTHORIZED_AMOUNT" xml:space="preserve">
-    <value>Max Authorized Amount</value>
+    <value>Authorized Amount Should be</value>
   </data>
   <data name="TEXT_MISCELLANEOUS_ADJUSTMENT" xml:space="preserve">
     <value>Miscellaneous Adjustment</value>
