FEAT-4461 As a MetraNet Finance User I want to be able to run a Deferred Revenue Schedule Report under Reports and the Accounting Folder. Add some localization for tabular report and modify grid Code Reviewer: ZMartynov

--- a/App_GlobalResources/Reports.es.resx
+++ b/App_GlobalResources/Reports.es.resx
@@ -153,6 +153,9 @@
   <data name="TEXT_DATE_LAST" xml:space="preserve">
     <value>[ES]Date Last</value>
   </data>
+  <data name="TEXT_DEFERRED_REVENUE_CODE" xml:space="preserve">
+    <value>[ES]Deferred revenue code</value>
+  </data>
   <data name="TEXT_DISCOUNT_NAME" xml:space="preserve">
     <value>[ES]Discount Name</value>
   </data>
@@ -245,6 +248,12 @@
   </data>
   <data name="TEXT_RC_TYPE" xml:space="preserve">
     <value>[ES]Type of RC</value>
+  </data>
+  <data name="TEXT_REVENUE_CODE" xml:space="preserve">
+    <value>[ES]Revenue code</value>
+  </data>
+  <data name="TEXT_REVENUE_PART" xml:space="preserve">
+    <value>[ES]Revenue Part</value>
   </data>
   <data name="TEXT_STATE" xml:space="preserve">
     <value>[ES]State</value>
