--- a/App_GlobalResources/Reports.es-MX.resx
+++ b/App_GlobalResources/Reports.es-MX.resx
@@ -153,6 +153,9 @@
   <data name="TEXT_DATE_LAST" xml:space="preserve">
     <value>[es-MX]Date Last</value>
   </data>
+  <data name="TEXT_DEFERRED_REVENUE_CODE" xml:space="preserve">
+    <value>[ES-MX]Deferred revenue code</value>
+  </data>
   <data name="TEXT_DISCOUNT_NAME" xml:space="preserve">
     <value>[es-MX]Discount Name</value>
   </data>
@@ -245,6 +248,12 @@
   </data>
   <data name="TEXT_RC_TYPE" xml:space="preserve">
     <value>[es-MX]Type of RC</value>
+  </data>
+  <data name="TEXT_REVENUE_CODE" xml:space="preserve">
+    <value>[ES-MX]Revenue code</value>
+  </data>
+  <data name="TEXT_REVENUE_PART" xml:space="preserve">
+    <value>[ES-MX]Revenue Part</value>
   </data>
   <data name="TEXT_STATE" xml:space="preserve">
     <value>[es-MX]State</value>
