--- a/App_GlobalResources/Reports.fr.resx
+++ b/App_GlobalResources/Reports.fr.resx
@@ -153,6 +153,9 @@
   <data name="TEXT_DATE_LAST" xml:space="preserve">
     <value>Date finale</value>
   </data>
+  <data name="TEXT_DEFERRED_REVENUE_CODE" xml:space="preserve">
+    <value>[FR]Deferred revenue code</value>
+  </data>
   <data name="TEXT_DISCOUNT_NAME" xml:space="preserve">
     <value>Nom de la remise</value>
   </data>
@@ -245,6 +248,12 @@
   </data>
   <data name="TEXT_RC_TYPE" xml:space="preserve">
     <value>Type de RC</value>
+  </data>
+  <data name="TEXT_REVENUE_CODE" xml:space="preserve">
+    <value>[FR]Revenue code</value>
+  </data>
+  <data name="TEXT_REVENUE_PART" xml:space="preserve">
+    <value>[FR]Revenue Part</value>
   </data>
   <data name="TEXT_STATE" xml:space="preserve">
     <value>État</value>
