--- a/MetraOffer/App_LocalResources/ProductDashboard.aspx.ja.resx
+++ b/MetraOffer/App_LocalResources/ProductDashboard.aspx.ja.resx
@@ -119,7 +119,7 @@
   </resheader>
   <data name="MTTitle1Resource1.Text" xml:space="preserve">
     <value>{JA}Product Dashboard</value>
-  </data>  
+  </data>
   <data name="pnlRecentOfferingChangesResource1.Text" xml:space="preserve">
     <value>{JA}Recent Offering Changes</value>
   </data>
@@ -128,7 +128,7 @@
   </data>
   <data name="pnlMyRecentChangesResource1.Text" xml:space="preserve">
     <value>{JA}My Recent Changes</value>
-  </data>  
+  </data>
   <data name="pnlTop10MMRResource1.Text" xml:space="preserve">
     <value>{JA}Top 10 MRR</value>
   </data>
@@ -143,59 +143,58 @@
   </data>
   <data name="pnlTop10NewCustomersResource1.Text" xml:space="preserve">
     <value>{JA}Top 10 New Customers (Last 30 days)</value>
-  </data>   
+  </data>
   <data name="TEXT_USER_NAME" xml:space="preserve">
     <value>{JA}User Name</value>
-  </data> 
+  </data>
   <data name="TEXT_CHANGE_DATE" xml:space="preserve">
     <value>{JA}Change Date</value>
-  </data> 
+  </data>
   <data name="TEXT_DETAILS" xml:space="preserve">
     <value>{JA}Details</value>
-  </data> 
+  </data>
   <data name="TEXT_PO_ID" xml:space="preserve">
     <value>{JA}PO ID</value>
-  </data> 
+  </data>
   <data name="TEXT_PO_NAME" xml:space="preserve">
     <value>{JA}PO Name</value>
-  </data> 
+  </data>
   <data name="TEXT_CHANGE_DESCRIPTION" xml:space="preserve">
     <value>{JA}Change Description</value>
-  </data> 
+  </data>
   <data name="TEXT_PRODUCT_TEMPLATE_ID" xml:space="preserve">
     <value>{JA}Product Template ID</value>
-  </data> 
+  </data>
   <data name="TEXT_PRODUCT_TEMPLATE_NAME" xml:space="preserve">
     <value>{JA}Product Template Name</value>
-  </data> 
-   <data name="TEXT_SCHEDULE_ID" xml:space="preserve">
+  </data>
+  <data name="TEXT_SCHEDULE_ID" xml:space="preserve">
     <value>{JA}Schedule ID</value>
-  </data> 
+  </data>
   <data name="TEXT_NO_RECORDS" xml:space="preserve">
     <value>{JA}No Records</value>
-  </data>  
+  </data>
   <data name="TEXT_MRR_TOTAL" xml:space="preserve">
     <value>{JA}MRR Total</value>
-  </data>  
+  </data>
   <data name="TEXT_MRR_GAIN" xml:space="preserve">
     <value>{JA}MRR Gain</value>
-  </data> 
+  </data>
   <data name="TEXT_MRR_LOSS" xml:space="preserve">
     <value>{JA}MRR Loss</value>
-  </data> 
+  </data>
   <data name="TEXT_SUBSCRIPTIONS_TOTAL" xml:space="preserve">
     <value>{JA}Subscriptions Total</value>
-  </data>  
+  </data>
   <data name="TEXT_SUBSCRIPTIONS_GAIN" xml:space="preserve">
     <value>{JA}Subscriptions Gain</value>
-  </data>  
+  </data>
   <data name="TEXT_SUBSCRIPTIONS_LOSS" xml:space="preserve">
     <value>{JA}Subscriptions Loss</value>
   </data>
   <data name="TEXT_NO_DATA_AVAILABLE" xml:space="preserve">
     <value>{JA}No data found</value>
-  </data>  
-
+  </data>
   <data name="TEXT_MRR_TOOLTIP" xml:space="preserve">
     <value>{JA}MRR</value>
   </data>
@@ -204,5 +203,11 @@
   </data>
   <data name="TEXT_REVENUE_TOOLTIP" xml:space="preserve">
     <value>{JA}Revenue</value>
-  </data>  
+  </data>
+  <data name="UPDATED_BY_TEXT" xml:space="preserve">
+    <value>{JA}Updated by:</value>
+  </data>
+  <data name="VIEW_PO_TEXT" xml:space="preserve">
+    <value>{JA}View product offering</value>
+  </data>
 </root>
