--- a/MetraOffer/App_LocalResources/ProductDashboard.aspx.resx
+++ b/MetraOffer/App_LocalResources/ProductDashboard.aspx.resx
@@ -204,4 +204,10 @@
   <data name="TEXT_REVENUE_TOOLTIP" xml:space="preserve">
     <value>Revenue</value>
   </data>
+  <data name="UPDATED_BY_TEXT" xml:space="preserve">
+    <value>Updated by:</value>
+  </data>
+  <data name="VIEW_PO_TEXT" xml:space="preserve">
+    <value>View product offering</value>
+  </data>
 </root>
