--- a/Reporting/App_LocalResources/DefRevScheduleWidgetReport.aspx.resx
+++ b/Reporting/App_LocalResources/DefRevScheduleWidgetReport.aspx.resx
@@ -124,7 +124,7 @@
     <value>Apply Filter</value>
   </data>
   <data name="Currency_Caption" xml:space="preserve">
-    <value>Currenc</value>
+    <value>Currency</value>
   </data>
   <data name="Deferred_Caption" xml:space="preserve">
     <value>Deferred</value>
