FEAT-4461 As a MetraNet Finance User I want to be able to run a Deferred Revenue Schedule Report under Reports and the Accounting Folder. FEAT-4489 Add filters to report Code Reviewer: ZMartynov

--- a/App_GlobalResources/Reports.es.resx
+++ b/App_GlobalResources/Reports.es.resx
@@ -243,6 +243,9 @@
   <data name="TEXT_PO_SUBSCRIBED_TO" xml:space="preserve">
     <value>[ES]PO Subscribed to</value>
   </data>
+  <data name="TEXT_PRICEABLE_ITEM" xml:space="preserve">
+    <value>[ES]Priceable item</value>
+  </data>
   <data name="TEXT_PRORATION_REASON" xml:space="preserve">
     <value>[ES]Reason for Proration</value>
   </data>
