--- a/App_GlobalResources/Reports.es-MX.resx
+++ b/App_GlobalResources/Reports.es-MX.resx
@@ -243,6 +243,9 @@
   <data name="TEXT_PO_SUBSCRIBED_TO" xml:space="preserve">
     <value>[es-MX]PO Subscribed to</value>
   </data>
+  <data name="TEXT_PRICEABLE_ITEM" xml:space="preserve">
+    <value>[es-MX]Priceable item</value>
+  </data>
   <data name="TEXT_PRORATION_REASON" xml:space="preserve">
     <value>[es-MX]Reason for Proration</value>
   </data>
