--- a/App_GlobalResources/Reports.fr.resx
+++ b/App_GlobalResources/Reports.fr.resx
@@ -243,6 +243,12 @@
   <data name="TEXT_PO_SUBSCRIBED_TO" xml:space="preserve">
     <value>PO abonnement</value>
   </data>
+  <data name="TEXT_PRICEABLE_ITEM" xml:space="preserve">
+    <value>[FR]Priceable item</value>
+  </data>
+  <data name="TEXT_PRODUCT" xml:space="preserve">
+    <value>[FR]Product</value>
+  </data>
   <data name="TEXT_PRORATION_REASON" xml:space="preserve">
     <value>Motif de proration</value>
   </data>
