--- a/App_GlobalResources/Reports.it.resx
+++ b/App_GlobalResources/Reports.it.resx
@@ -243,6 +243,12 @@
   <data name="TEXT_PO_SUBSCRIBED_TO" xml:space="preserve">
     <value>[IT]PO Subscribed to</value>
   </data>
+  <data name="TEXT_PRICEABLE_ITEM" xml:space="preserve">
+    <value>[IT]Priceable item</value>
+  </data>
+  <data name="TEXT_PRODUCT" xml:space="preserve">
+    <value>[IT]Product</value>
+  </data>
   <data name="TEXT_PRORATION_REASON" xml:space="preserve">
     <value>[IT]Reason for Proration</value>
   </data>
