--- a/MetraOffer/App_LocalResources/ProductDashboard.aspx.es.resx
+++ b/MetraOffer/App_LocalResources/ProductDashboard.aspx.es.resx
@@ -208,7 +208,7 @@
     <value>{ES}Revenue</value>
   </data>
   <data name="UPDATED_BY_TEXT" xml:space="preserve">
-    <value>{ES}Updated by:</value>
+    <value>{ES}by</value>
   </data>
   <data name="VIEW_PO_TEXT" xml:space="preserve">
     <value>{ES}View product offering</value>
