--- a/MetraOffer/App_LocalResources/ProductDashboard.aspx.resx
+++ b/MetraOffer/App_LocalResources/ProductDashboard.aspx.resx
@@ -211,7 +211,7 @@
     <value>Loss</value>
   </data>
   <data name="UPDATED_BY_TEXT" xml:space="preserve">
-    <value>Updated by:</value>
+    <value>by</value>
   </data>
   <data name="VIEW_PO_TEXT" xml:space="preserve">
     <value>View product offering</value>
