CORE-8623 - FEAT-4349 Add ACS:partition admin can create ACS for PO not from it's partition using AccountConfigSetParametersId fixed
TODO: negative tests for ValidateAccountConfigSetSubParams() service method

--- a/Localization/Global/GlobalResources.de.resx
+++ b/Localization/Global/GlobalResources.de.resx
@@ -786,4 +786,7 @@
   <data name="ACS_VALIDATION_UnableToFindSubscriptionPropertySeeDetails" xml:space="preserve">
     <value>[de] Unable to find subscription property. Details: '{0}'</value>
   </data>
+  <data name="ACS_VALIDATION_UnableToAddCofigurationSetSubParam" xml:space="preserve">
+    <value>[DE] Unable to add Account Configuration Set Subscription Params due to validation errors.</value>
+  </data>
 </root>
