--- a/Localization/Global/GlobalResources.en-GB.resx
+++ b/Localization/Global/GlobalResources.en-GB.resx
@@ -786,4 +786,7 @@
   <data name="ACS_VALIDATION_UnableToFindSubscriptionPropertySeeDetails" xml:space="preserve">
     <value>[en-GB] Unable to find subscription property. Details: '{0}'</value>
   </data>
+  <data name="ACS_VALIDATION_UnableToAddCofigurationSetSubParam" xml:space="preserve">
+    <value>[en-GB] Unable to add Account Configuration Set Subscription Params due to validation errors.</value>
+  </data>
 </root>
