--- a/MetraOffer/App_LocalResources/ProductDashboard.aspx.en-GB.resx
+++ b/MetraOffer/App_LocalResources/ProductDashboard.aspx.en-GB.resx
@@ -129,10 +129,10 @@
   <data name="pnlMyRecentChangesResource1.Text" xml:space="preserve">
     <value>My Recent Changes</value>
   </data>
-  <data name="TEXT_TOP_10_MRR" xml:space="preserve">
+  <data name="pnlTop10MMRResource1.Text" xml:space="preserve">
     <value>Top 10 MRR</value>
   </data>
-  <data name="TEXT_TOP_10_SUBSCRIPTIONS" xml:space="preserve">
+  <data name="pnlTop10SubsResource1.Text" xml:space="preserve">
     <value>Top 10 Subscriptions</value>
   </data>
   <data name="pnlTop10RevenueResource1.Text" xml:space="preserve">
@@ -213,10 +213,13 @@
   <data name="VIEW_PO_TEXT" xml:space="preserve">
     <value>View product offering</value>
   </data>
-   <data name="TEXT_GAIN_TOOLTIP" xml:space="preserve">
+  <data name="TEXT_GAIN_TOOLTIP" xml:space="preserve">
     <value>Gain</value>
   </data>
   <data name="TEXT_LOSS_TOOLTIP" xml:space="preserve">
     <value>Loss</value>
-  </data>  
+  </data>
+  <data name="TEXT_LAST_30_DAYS" xml:space="preserve">
+    <value>(Last 30 days)</value>
+  </data>
 </root>
