--- a/MetraOffer/App_LocalResources/ProductDashboard.aspx.resx
+++ b/MetraOffer/App_LocalResources/ProductDashboard.aspx.resx
@@ -129,10 +129,10 @@
   <data name="pnlMyRecentChangesResource1.Text" xml:space="preserve">
     <value>My Recent Changes</value>
   </data>
-  <data name="TEXT_TOP_10_MRR" xml:space="preserve">
+  <data name="pnlTop10MMRResource1.Text" xml:space="preserve">
     <value>Top 10 MRR</value>
   </data>
-  <data name="TEXT_TOP_10_SUBSCRIPTIONS" xml:space="preserve">
+  <data name="pnlTop10SubsResource1.Text" xml:space="preserve">
     <value>Top 10 Subscriptions</value>
   </data>
   <data name="pnlTop10RevenueResource1.Text" xml:space="preserve">
@@ -215,5 +215,8 @@
   </data>
   <data name="VIEW_PO_TEXT" xml:space="preserve">
     <value>View product offering</value>
+  </data>
+  <data name="TEXT_LAST_30_DAYS" xml:space="preserve">
+    <value>(Last 30 days)</value>
   </data>
 </root>
