CORE-8635 [FEAT-4552] Delete Configuration Set: Wrong response is after running DeleteAccountConfigSet method for 1 exists and 1 not exists AcsID Code reviewer: NKuklich

--- a/Localization/Global/GlobalResources.en-GB.resx
+++ b/Localization/Global/GlobalResources.en-GB.resx
@@ -253,7 +253,7 @@
     <value>Error delete account configuration set</value>
   </data>
   <data name="DELETE_ACCOUNTCONFIGSET_INVALID_ID_EXCEPTION" xml:space="preserve">
-    <value>Array of Account Configuration Set IDs contains invalid IDs: {0}</value>
+    <value>Array of Account Configuration Set IDs contains invalid ID: {0}</value>
   </data>
   <data name="DELETED_ENTITY" xml:space="preserve">
     <value>[en-GB]Deleted entity with ID {0} from entity list</value>
