--- a/Localization/Global/GlobalResources.ja.resx
+++ b/Localization/Global/GlobalResources.ja.resx
@@ -253,7 +253,7 @@
     <value>[JA]Error delete account configuration set</value>
   </data>
   <data name="DELETE_ACCOUNTCONFIGSET_INVALID_ID_EXCEPTION" xml:space="preserve">
-    <value>[JA]Array of Account Configuration Set IDs contains invalid IDs: {0}</value>
+    <value>[JA]Array of Account Configuration Set IDs contains invalid ID: {0}</value>
   </data>
   <data name="DELETED_ENTITY" xml:space="preserve">
     <value>[JA]Deleted entity with ID {0} from entity list</value>
