--- a/Localization/Global/GlobalResources.en-GB.resx
+++ b/Localization/Global/GlobalResources.en-GB.resx
@@ -780,6 +780,9 @@
   <data name="UPDATE_ACCOUNTCONFIGSET_EXCEPTION" xml:space="preserve">
     <value>Error update account configuration set</value>
   </data>
+  <data name="UPDATE_ACCOUNTCONFIGSET_PARAMETERS_EXCEPTION" xml:space="preserve">
+    <value>Error on update Account Configuration Set Parameters</value>
+  </data>
   <data name="UPDATED_AGREEMENT_TEMPLATE_AUDIT" xml:space="preserve">
     <value>[en-GB]Updated Agreement Template with id {0}.</value>
   </data>
