--- a/Localization/Global/GlobalResources.ja.resx
+++ b/Localization/Global/GlobalResources.ja.resx
@@ -780,6 +780,9 @@
   <data name="UPDATE_ACCOUNTCONFIGSET_EXCEPTION" xml:space="preserve">
     <value>[JA]Error update account configuration set</value>
   </data>
+  <data name="UPDATE_ACCOUNTCONFIGSET_PARAMETERS_EXCEPTION" xml:space="preserve">
+    <value>[JA]Error on update Account Configuration Set Parameters</value>
+  </data>
   <data name="UPDATED_AGREEMENT_TEMPLATE_AUDIT" xml:space="preserve">
     <value>[JA]Updated Agreement Template with id {0}.</value>
   </data>
