--- a/Localization/Global/GlobalResources.resx
+++ b/Localization/Global/GlobalResources.resx
@@ -774,6 +774,9 @@
   <data name="UPDATE_ACCOUNTCONFIGSET_EXCEPTION" xml:space="preserve">
     <value>Error on update Account Configuration Set</value>
   </data>
+  <data name="UPDATE_ACCOUNTCONFIGSET_PARAMETERS_EXCEPTION" xml:space="preserve">
+    <value>Error on update Account Configuration Set Parameters</value>
+  </data>
   <data name="UPDATED_AGREEMENT_TEMPLATE_AUDIT" xml:space="preserve">
     <value>Updated Agreement Template with id {0}.</value>
   </data>
