FEAT-4552 FEAT-4742:"[Dev] Inform user about skipped IDs of Applied ACSs and ACS of other partition" Code:Reviewer: YZapara

--- a/Localization/Global/GlobalResources.es-MX.resx
+++ b/Localization/Global/GlobalResources.es-MX.resx
@@ -255,6 +255,12 @@
   <data name="DELETE_ACCOUNTCONFIGSET_INVALID_ID_EXCEPTION" xml:space="preserve">
     <value>[es-MX]Array of Account Configuration Set IDs contains invalid ID: {0}</value>
   </data>
+  <data name="DELETE_APPLIED_ACCOUNTCONFIGSET_EXCEPTION" xml:space="preserve">
+    <value>[es-MX]Applied Account Configuration Set cannot be deleted. ID: {0}</value>
+  </data>
+  <data name="DELETE_OTHER_PARTITION_ACCOUNTCONFIGSET_EXCEPTION" xml:space="preserve">
+    <value>[es-MX]Account Configuration Set of other Partition cannot be deleted. ID: {0}</value>
+  </data>
   <data name="DELETED_ENTITY" xml:space="preserve">
     <value>[es-MX]Deleted entity with ID {0} from entity list</value>
   </data>
