--- a/Localization/Global/GlobalResources.fr.resx
+++ b/Localization/Global/GlobalResources.fr.resx
@@ -783,6 +783,9 @@
   <data name="TX_ALREADY_SUBMITTED" xml:space="preserve">
     <value>La transaction {0} a déjà été envoyée.</value>
   </data>
+  <data name="TERMINATE_ACCOUNTCONFIGSET_EXCEPTION" xml:space="preserve">
+    <value>[FR]Error on termination Account Configuration Set</value>
+  </data>
   <data name="UPDATE_ACCOUNTCONFIGSET_EXCEPTION" xml:space="preserve">
     <value>[FR]Error update account configuration set</value>
   </data>
