--- a/Localization/Global/GlobalResources.pt-br.resx
+++ b/Localization/Global/GlobalResources.pt-br.resx
@@ -783,6 +783,9 @@
   <data name="TX_ALREADY_SUBMITTED" xml:space="preserve">
     <value>A transação {0} já foi enviada.</value>
   </data>
+  <data name="TERMINATE_ACCOUNTCONFIGSET_EXCEPTION" xml:space="preserve">
+    <value>[pt-br]Error on termination Account Configuration Set</value>
+  </data>
   <data name="UPDATE_ACCOUNTCONFIGSET_EXCEPTION" xml:space="preserve">
     <value>[pt-br]Error update account configuration set</value>
   </data>
