--- a/Localization/Global/GlobalResources.resx
+++ b/Localization/Global/GlobalResources.resx
@@ -777,6 +777,9 @@
   <data name="TX_ALREADY_SUBMITTED" xml:space="preserve">
     <value>Transaction {0} was already submitted.</value>
   </data>
+  <data name="TERMINATE_ACCOUNTCONFIGSET_EXCEPTION" xml:space="preserve">
+    <value>Error on termination Account Configuration Set</value>
+  </data>
   <data name="UPDATE_ACCOUNTCONFIGSET_EXCEPTION" xml:space="preserve">
     <value>Error on update Account Configuration Set</value>
   </data>
